1、fix bug